Support for switch expressions