@@ -111,6 +111,7 @@ public class MainTest {
                     Paths.get(System.getProperty("java.home")).resolve("bin/java").toString(),
                     "-cp",
                     System.getProperty("java.class.path"),
+                    "--enable-preview",
                     Main.class.getName()))
             .redirectError(Redirect.PIPE)
             .redirectOutput(Redirect.PIPE)
@@ -437,6 +438,7 @@ public class MainTest {
                     Paths.get(System.getProperty("java.home")).resolve("bin/java").toString(),
                     "-cp",
                     System.getProperty("java.class.path"),
+                    "--enable-preview",
                     Main.class.getName(),
                     "-n",
                     "--set-exit-if-changed",
@@ -463,6 +465,7 @@ public class MainTest {
                     Paths.get(System.getProperty("java.home")).resolve("bin/java").toString(),
                     "-cp",
                     System.getProperty("java.class.path"),
+                    "--enable-preview",
                     Main.class.getName(),
                     "-n",
                     "--set-exit-if-changed",
